--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html, body, #root {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+
+  :root {
+    --border-gray-lightest: 244,243,248; /* #F4F3F8 */
+    --border-gray-light: 242,242,242; /* #F2F2F2 */
+    --border-gray-base: 232,232,232; /* #E8E8E8 */
+    --border-gray-dark: 139,143,150; /* #8B8F96 */
+
+    --text-gray-light: 183,183,183; /* #B7B7B7 */
+    --text-gray-base: 139,143,150; /* #8B8F96 */
+    --text-gray-dark: 99,97,102; /* #636166 */
+    
+    --bg-gray-lightest: 251,251,251; /* #FBFBFB */
+    --bg-gray-light: 244,243,248; /* #F4F3F8 */
+    --bg-gray-base: 237,237,237; /* #EDEDED */
+    --bg-gray-dark: 99,97,102; /* #636166 */
+    
+    --color-primary-grayed: 135,126,158; /* #877E9E */
+    --color-primary-muted: 169,140,246; /* #A98CF6 */
+    --color-primary: 67,5,235; /* #4305EB */
+    --color-primary-accent: 44,12,106; /* #2C0C6A */
+  }
+}
+
+@layer utilities {
+  @variants responsive {
+    .grid-cols-repeat {
+      grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+    }
+  }
+}
