feat: add darkest text gray

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
     --text-gray-light: 183,183,183; /* #B7B7B7 */
     --text-gray-base: 139,143,150; /* #8B8F96 */
     --text-gray-dark: 99,97,102; /* #636166 */
+    --text-gray-darkest: 64, 64, 64; /* #404040 */
     
     --bg-gray-lightest: 251,251,251; /* #FBFBFB */
     --bg-gray-light: 244,243,248; /* #F4F3F8 */
